<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/mapHomeFragment">

    <fragment
        android:id="@+id/mapHomeFragment"
        android:name="com.pawmap.app.ui.map.MapHomeFragment"
        android:label="@string/tab_map"
        tools:layout="@layout/fragment_map_home">
        <action
            android:id="@+id/action_map_to_search"
            app:destination="@id/searchResultFragment" />
        <action
            android:id="@+id/action_map_to_detail"
            app:destination="@id/placeDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/searchResultFragment"
        android:name="com.pawmap.app.ui.search.SearchResultFragment"
        android:label="검색 결과"
        tools:layout="@layout/fragment_search_result">
        <argument android:name="query" app:argType="string" android:defaultValue="" />
        <action
            android:id="@+id/action_search_to_detail"
            app:destination="@id/placeDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/placeDetailFragment"
        android:name="com.pawmap.app.ui.detail.PlaceDetailFragment"
        android:label="장소 상세"
        tools:layout="@layout/fragment_place_detail">
        <argument android:name="placeId" app:argType="long" />
    </fragment>

    <fragment
        android:id="@+id/savedPlacesFragment"
        android:name="com.pawmap.app.ui.saved.SavedPlacesFragment"
        android:label="@string/tab_saved"
        tools:layout="@layout/fragment_saved_places">
        <action
            android:id="@+id/action_saved_to_listDetail"
            app:destination="@id/listDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/listDetailFragment"
        android:name="com.pawmap.app.ui.saved.ListDetailFragment"
        android:label="목록 상세"
        tools:layout="@layout/fragment_list_detail">
        <argument android:name="listId" app:argType="long" />
        <action
            android:id="@+id/action_listDetail_to_detail"
            app:destination="@id/placeDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/tripMainFragment"
        android:name="com.pawmap.app.ui.trip.TripMainFragment"
        android:label="@string/tab_trip"
        tools:layout="@layout/fragment_trip_main">
        <action
            android:id="@+id/action_tripMain_to_tripName"
            app:destination="@id/tripNameFragment" />
        <action
            android:id="@+id/action_tripMain_to_tripDetail"
            app:destination="@id/tripDetailFragment" />
        <action
            android:id="@+id/action_tripMain_to_pastTrips"
            app:destination="@id/pastTripsFragment" />
        <action
            android:id="@+id/action_tripMain_to_datePicker"
            app:destination="@id/tripDatePickerFragment" />
    </fragment>

    <fragment
        android:id="@+id/tripDatePickerFragment"
        android:name="com.pawmap.app.ui.trip.TripDatePickerFragment"
        android:label="여행 날짜 선택"
        tools:layout="@layout/fragment_trip_date_picker">
        <action
            android:id="@+id/action_datePicker_to_tripName"
            app:destination="@id/tripNameFragment" />
    </fragment>

    <fragment
        android:id="@+id/tripNameFragment"
        android:name="com.pawmap.app.ui.trip.TripNameFragment"
        android:label="여행 이름"
        tools:layout="@layout/fragment_trip_name">
        <argument android:name="startDate" app:argType="long" />
        <argument android:name="endDate" app:argType="long" />
        <action
            android:id="@+id/action_tripName_to_tripDetail"
            app:destination="@id/tripDetailFragment"
            app:popUpTo="@id/tripMainFragment" />
    </fragment>

    <fragment
        android:id="@+id/tripDetailFragment"
        android:name="com.pawmap.app.ui.trip.TripDetailFragment"
        android:label="여행 상세"
        tools:layout="@layout/fragment_trip_detail">
        <argument android:name="tripId" app:argType="long" />
        <action
            android:id="@+id/action_tripDetail_to_addPlace"
            app:destination="@id/addPlaceFragment" />
    </fragment>

    <fragment
        android:id="@+id/addPlaceFragment"
        android:name="com.pawmap.app.ui.trip.AddPlaceFragment"
        android:label="장소 추가"
        tools:layout="@layout/fragment_add_place">
        <argument android:name="tripId" app:argType="long" />
        <argument android:name="dayIndex" app:argType="integer" />
    </fragment>

    <fragment
        android:id="@+id/pastTripsFragment"
        android:name="com.pawmap.app.ui.trip.PastTripsFragment"
        android:label="@string/past_trips_title"
        tools:layout="@layout/fragment_past_trips">
        <action
            android:id="@+id/action_pastTrips_to_pastTripDetail"
            app:destination="@id/pastTripDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/pastTripDetailFragment"
        android:name="com.pawmap.app.ui.trip.PastTripDetailFragment"
        android:label="지난 여행 상세"
        tools:layout="@layout/fragment_past_trip_detail">
        <argument android:name="tripId" app:argType="long" />
    </fragment>

</navigation>